--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,13 +9,11 @@ $desktop  : 1280px;
 
 /* #region Colors */
 
-$darkGold: #A9904C;
-$lightGold: #DCD1B2;
-$darkGray: #595959;
-$mediumGray: #757575;
-$lightGray: #949494;
+$darkGray: #2B2B2B;
+$mediumDarkGray: #595959;
+$mediumLightGray: #757575;
+$lightGray: #D1D1D1;
 
-$navy: #374768;
 
 /* #endregion Colors */
 
