--- a/components/Header/style.module.scss
+++ b/components/Header/style.module.scss
@@ -1,13 +1,13 @@
 @use "../../styles/variables" as variables;
 
 .Header {
-    background-color: variables.$navy;
+    background-color: variables.$mediumLightGray;
     color: white;
     
     white-space: nowrap;
 
     h1 {
-        border-bottom: solid 0.25em variables.$darkGold;
+        border-bottom: solid 0.25em variables.$lightGray;
 
         color: white; 
         
